--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
             <span id="displayMain"></span>    
         </div>
 
-        <div class="specialButtons">
-            <button id="clear">Clear</button>
-            <button id="backSpace">⌫</button>
-        </div>
-
         <div id="buttonsKeyboard">
             <button class="key" value="7">7</button>
             <button class="key" value="8">8</button>
@@ -35,6 +30,11 @@
             <button class="key" value="0">0</button>
             <button class="opKey" value="=">=</button>
             <button class="opKey" value="+">+</button>
+        </div>
+
+        <div class="specialButtons">
+            <button id="clear">C</button>
+            <button id="backSpace">⌫</button>
         </div>
     </div>
 </body>
